# zchunk

./: README.md  meson.build
doc/: offline-updates.md  zck_chunk_store.1  zck_chunk_validate.1  zckdlfs.1
include/: zck.h.in
src/: meson.build  zck_chunk_store.c  zck_chunk_validate.c  zck_dir.c  zck_dl_dir.c
src/lib/dl/: dl.c
test/: meson.build  offline_workflow.sh
test/abi/stable/: zck.h
